# minecraft-finder

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.gethub/workflows/: build.yml
.github/workflows/: build.yml
src/: __init__.py  main.py  search.py
tests/: test_main.py
