[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project]
name = "minecraft-finder"
version = "0.1.0"
authors = [
    { name="Yichen Qu", email="yichen.qu@outlook.com" },
]
description = ""
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "pandas",
    "matplotlib",
    "requests",
    "argparse",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy",
    "pre-commit",
    "pandas-stubs",
    "types-requests",
    "pyinstaller",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]